--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,26 +1,11 @@
-<div style="font-family: Arial, sans-serif; margin: 20px; padding: 20px; border: 1px solid #ddd; border-radius: 8px; background-color: #f9f9f9;">
-    <p style="text-align: center; font-style: italic; color: #888;">Published on: November 23, 2024</p>
-    <h1 style="color: #2c3e50;">I love my dogs!</h1>
-    <p style="font-size: 16px; color: #555;">I have two dogs, Roco and Kenai. They have different personalities but both are very lovely and needy.</p>
-    
-    <div style="margin-top: 20px;">
-        <h2 style="color: #34495e; text-align: center;">Roco</h2>
-        <p style="text-align: center;"><strong>Age:</strong> 2 years old</p>
-        <p style="text-align: center;"><strong>Breed:</strong> German Shepherd</p>
-        <p style="text-align: center;"><strong>Personality:</strong> He thinks he's a little boy, needy, clingy, and energetic.</p>
-        <div style="text-align: center; margin-top: 10px;">
-          <img src="https://d128mjo55rz53e.cloudfront.net/media/images/Blog-breed-_german_sheperd_d934y.max-400x400.format-jpeg.jpg" alt="Photo of Roco" style="max-width: 50%; border-radius: 8px;">
-        </div>
-      </div>
-      
-      <div style="margin-top: 20px;">
-        <h2 style="color: #34495e; text-align: center;">Kenai</h2>
-        <p style="text-align: center;"><strong>Age:</strong> 4 years old</p>
-        <p style="text-align: center;"><strong>Breed:</strong> Mixed-breed</p>
-        <p style="text-align: center;"><strong>Personality:</strong> Grinch, needy, loves women (he really does), storms and fireworks make him very anxious and he's very smart.</p>
-        <div style="text-align: center; margin-top: 10px;">
-          <img src="https://st.depositphotos.com/63220296/57049/i/450/depositphotos_570491276-stock-photo-portrait-beautiful-mixed-breed-dog.jpg" alt="Photo of Kenai" style="max-width: 50%; border-radius: 8px;">
-        </div>
-      </div>
-      
-  
+<div>
+    <h1><a href="/">Django Girls Blog</a></h1>
+</div>
+
+{% for post in posts %}
+    <div>
+        <p> publicado: {{ post.published_date }}</p>
+        <h2><a href="">{{ post.title }}</a></h2>
+        <p>{{ post.text|linebreaksbr }}</p>
+    </div>
+{% endfor %}
